update change language function

--- a/src/pages/Lock.css
+++ b/src/pages/Lock.css
@@ -22,25 +22,11 @@
   color: #363f4e;
 }
 
-.lockStatusPaper {
+.lockStatusGrid {
   font-size: 20px;
   font-weight: 700;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
   /* font-family: "Roboto";
 	font-style: normal; */
-}
-
-.lockCirclePaper {
-  width: 70%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 7px 0;
-  font-family: "Roboto";
-  font-style: "normal";
 }
 
 .lockContent {
