--- a/src/pages/Lock.css
+++ b/src/pages/Lock.css
@@ -39,8 +39,8 @@
   justify-content: space-between;
   align-items: center;
   margin: 7px 0;
-  font-family: "Roboto";
-  font-style: "normal";
+  font-family: Roboto、sans-serif;
+  font-style: normal;
 }
 
 .lockContent {
