--- a/src/components/Readmode.css
+++ b/src/components/Readmode.css
@@ -43,21 +43,29 @@
   height: 64px;
   display: flex;
   align-items: center;
+  gap: 1rem;
+}
+.userInfoMode {
+  width: 90%;
+}
+.userInfoMode > div {
+  width: 100%;
 }
 .userInfoMode,
 .userInfoMode > div {
-  width: 95%;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: flex-start;
 }
 .userInfoLockNumber {
+  width: 90%;
   height: 30px;
   margin: 30px 0 15px 0;
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 15px;
 }
 
 .userInfoLockNumber h1 {
@@ -66,7 +74,6 @@
   line-height: 30px;
   font-style: bold;
   color: #363f4e;
-  margin: 0 0 0 15px;
 }
 .userInfoLockNumber > img {
   margin: 3px 0;
@@ -80,15 +87,17 @@
   margin: 0 0 0 15px;
 }
 .userInfo .detail {
+  overflow: hidden;
+  padding: 0.5em;
+  text-overflow: ellipsis;
   font-weight: 400;
-  margin: 20px 0 20px 25px;
 }
 .userInfo p {
   margin-top: 0;
 }
 .userInfoLockState {
-  width: 80%;
-  margin: 0 25px 40px 0;
+  width: 90%;
+  margin: 0 0 40px 0;
 }
 .userRecordTitle {
   color: #363f4e;
@@ -119,6 +128,5 @@
 }
 .userDelete {
   text-align: right;
-  padding: 0 16px;
-  margin-left: 40px;
+  flex-grow: 1;
 }
