--- a/src/pages/MemberList.css
+++ b/src/pages/MemberList.css
@@ -1,19 +1,30 @@
 #memberList {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 16px;
 }
 .memberHeader {
   display: flex;
   align-items: center;
   justify-content: space-between;
   text-align: left;
-  font-size: 28px;
+  font-size: 20px;
   font-weight: 700;
   font-style: bold;
   line-height: 30px;
   color: #000000;
   margin: 70px 0 0 0;
 }
+
+@media (min-width: 600px) {
+  .memberHeader {
+    font-size: 28px;
+  }
+  .css-1jbbcbn-MuiDataGrid-columnHeaderTitle {
+    font-size: 20px;
+  }
+}
+
 .memberHeader a {
   text-decoration: none;
 }
@@ -32,7 +43,7 @@
   overflow: hidden;
   white-space: nowrap;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 16px;
 }
 
 .css-3ihp42-MuiDataGrid-root .MuiDataGrid-cellContent {
