--- a/src/pages/Info.css
+++ b/src/pages/Info.css
@@ -44,3 +44,13 @@
 .userInfoTitle {
   width: 90%;
 }
+.userButtonHint {
+  height: 24;
+  display: flex;
+  justify-content: center;
+  align-item: center;
+  text-align: center;
+  margin: 16px;
+  padding: 8px;
+  font-size: 16px;
+}
